04-PyFastapi-hello-world/k8s-manifests/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pyfastapi-hello-app
  labels:
    app: pyfastapi-hello-app
    app.kubernetes.io/name: pyfastapi-hello-app
    app.kubernetes.io/part-of: python-apps
    app.openshift.io/runtime: python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pyfastapi-hello-app
  template:
    metadata:
      labels:
        app: pyfastapi-hello-app
        deployment: pyfastapi-hello-app
      annotations:
    spec:
      containers:
        - name: pyfastapi-hello-app
          image: 'quay.io/mukeshs1306/noventiqvp-pyfastapi-hello:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
